--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -1,12 +1,10 @@
-.form-search {
-  padding: 16px;
-  width: 100%;
+.Navigation-search {
+  padding: 1em;
 }
 
 #search-input {
   width: 100%;
   border-radius: 3px;
   border: 1px solid #ececec;
-  padding: 8px;
+  padding: .5em;
 }
-
